--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,15 +1,15 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-swap = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.devnet]
+swap = "6g7FMSAAjJK33JADSprJwaDwL5FPuyqRfqv6ekPKCdDz"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "/home/mard/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/mnt/c/Users/detec/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/swap.ts"
